--- a/eli.css
+++ b/eli.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #0b0b0c;
+  background-color: #fdcffa;
   font-family: Serif;
   margin: 0;
   padding: 0;
@@ -10,19 +10,19 @@ body {
 
 
 h1 {
-  background-color: #8B4513;
+  background-color: #f2aebb;
   color: white;
   padding: 20px 30px;
   margin: 0;
   font-size: 2rem;
   border-bottom: 3px solid #5D3311;
   border-radius: 0 0 8px 8px;
-  text-align: justify;
+  text-align: center;
   font-weight: normal;
 }
 
 main{
-  background-color:#ffd700;
+  background-color: #9B5DE0;
   border: 2px solid #99ccff;
   max-width: 900px;
   margin: 20px auto;
@@ -32,7 +32,7 @@ main{
 }
 
 footer {
-  background-color:#5D3311 ;
+  background: color #6e8cfb; ;
   color: white;
   padding: 20px;
   font-size: 1.2rem;
