--- a/src/output.css
+++ b/src/output.css
@@ -1,4 +1,5 @@
 /*! tailwindcss v4.1.14 | MIT License | https://tailwindcss.com */
+@layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
   :root, :host {
@@ -6,6 +7,10 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --spacing: 0.25rem;
+    --font-weight-bold: 700;
+    --radius-2xl: 1rem;
+    --animate-pulse: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -171,5 +176,106 @@
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
+}
+.backgroundeli {
+  margin: 5px;
+  animation: var(--animate-pulse);
+  background-color: #FDCFFA;
+  @media (width >= 48rem) {
+    margin: 100px;
+  }
+}
+.bannereli {
+  margin-inline: calc(var(--spacing) * 5);
+  margin-block: calc(var(--spacing) * 4);
+  border-radius: var(--radius-2xl);
+  background-color: #F2AEBB;
+  padding-block: calc(var(--spacing) * 2);
+  text-align: center;
+  font-size: 25px;
+  --tw-font-weight: var(--font-weight-bold);
+  font-weight: var(--font-weight-bold);
+  @media (width >= 48rem) {
+    font-size: 50px;
+  }
+}
+.Infoeli {
+  margin-inline: calc(var(--spacing) * 3);
+  border-radius: var(--radius-2xl);
+  background-color: #9B5DE0;
+  padding-inline: calc(var(--spacing) * 2);
+  padding-block: calc(var(--spacing) * 5);
+  text-align: left;
+  font-size: 20px;
+  @media (width >= 48rem) {
+    font-size: 30px;
+  }
+}
+.numbereli {
+  margin-block: calc(var(--spacing) * 5);
+  --tw-font-weight: var(--font-weight-bold);
+  font-weight: var(--font-weight-bold);
+}
+.footereli {
+  margin-inline: calc(5px * -1);
+  margin-top: 40px;
+  background-color: #6E8CFB;
+  padding-block: 50px;
+  text-align: center;
+  font-size: 20px;
+  @media (width >= 48rem) {
+    margin-inline: calc(100px * -1);
+  }
+  @media (width >= 48rem) {
+    font-size: 30px;
+  }
+}
+.tableeli1 {
+  margin-block: calc(var(--spacing) * 5);
+  @media (width >= 48rem) {
+    margin-inline: calc(var(--spacing) * 71);
+  }
+}
+.tableeli {
+  margin-block: calc(var(--spacing) * 5);
+  @media (width >= 48rem) {
+    margin-inline: calc(var(--spacing) * 80);
+  }
+}
+.tableeli2 {
+  margin-block: calc(var(--spacing) * 5);
+  @media (width >= 48rem) {
+    margin-inline: calc(var(--spacing) * 70);
+  }
+}
+.Footer {
+  margin-inline: calc(5px * -1);
+  margin-top: 40px;
+  background-color: #6E8CFB;
+  padding-block: 50px;
+  text-align: center;
+  font-size: 20px;
+  @media (width >= 48rem) {
+    margin-inline: calc(100px * -1);
+  }
+  @media (width >= 48rem) {
+    font-size: 30px;
+  }
+}
+@property --tw-font-weight {
+  syntax: "*";
+  inherits: false;
+}
+@keyframes pulse {
+  50% {
+    opacity: 0.5;
+  }
+}
+@layer properties {
+  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
+    *, ::before, ::after, ::backdrop {
+      --tw-font-weight: initial;
+    }
   }
 }
